# CPTS-Studies

./: README.md  information-gathering-web-edition.md  vulnerability-assessment.md
File_Transfers/: file-transfers.md
Footprinting/: Footprinting.md
Getting_Started/: Getting_Started.md
Network_Enumeration_with_Nmap/: Network-Enumeration-with-Nmap.md
Penetration Testing Process/: Penetration-Testing-Process.md
Shells_and_Payloads/: shells-and-payloads.md
Using the Metasploit Framework/: Using the Metasploit Framework.md
socai/: .env.example  .pre-commit-config.yaml  Makefile  app.py  pyproject.toml
socai/apps/api/: main.py
socai/docs/: DETECTION_ENGINE.md
socai/tests/: test_app.py  test_engine.py  test_normalize.py
