[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socai"
version = "0.1.0"
description = "Base scaffold for the socai project"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "sqlalchemy",
  "psycopg[binary]",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
  "pytest-asyncio",
  "mypy",
  "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
